--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,6 +1,6 @@
 @use "breakpoints" as *;
 
-@mixin display {
+@mixin heading-display {
   font-size: 2.5rem;
   line-height: 2.75rem;
 
@@ -10,7 +10,7 @@
   }
 }
 
-@mixin h1 {
+@mixin heading-1 {
   font-size: 2rem;
   line-height: 2.4rem;
 
@@ -20,72 +20,86 @@
   }
 }
 
-@mixin h2 {
+@mixin heading-2 {
   font-size: 1.5rem;
   line-height: 1.8rem;
 
   @include desktop {
-    font-size: 3rem;
-    line-height: 3.6rem;
+    font-size: 3.625rem;
+    font-weight: 700;
+    line-height: 4.375rem;
+    letter-spacing: -0.0625rem;
   }
 }
 
-@mixin h3 {
-  font-size: 1.25rem;
-  line-height: 1.5rem;
+@mixin heading-3 {
+  font-size: 1.375rem;
+  line-height: 1.625rem;
 
   @include desktop {
-    font-size: 2rem;
-    line-height: 2.4rem;
+    font-size: 2.625rem;
+    font-weight: 700;
+    line-height: 3.25rem;
+    letter-spacing: -0.025rem;
   }
 }
 
-@mixin h4 {
+@mixin heading-5 {
   font-size: 1.125rem;
   line-height: 1.35rem;
-
-  @include desktop {
-    font-size: 1.5rem;
-    line-height: 1.8rem;
-  }
-}
-
-@mixin h5 {
-  font-size: 1.125rem; 
-  line-height: 1.35rem; 
   letter-spacing: 0;
 
   @include desktop {
-    font-size: 1.5rem; 
-    line-height: 1.8rem;
+    font-size: 1.375rem;
+    font-weight: 500;
+    line-height: 2rem;
   }
 }
 
-@mixin bodySmall {
-  font-size: 0.75rem;
-  line-height: 1.125rem;
-}
-
-@mixin bodyRegular {
-  font-size: 0.875rem;
-  line-height: 1.313rem;
-}
-
-@mixin caption {
-  font-size: 0.625rem;
-  line-height: 0.938rem;
-}
-
-@mixin buttonLabel {
+@mixin text-body {
   font-size: 1rem;
   line-height: 1.5rem;
+  letter-spacing: -0.015625rem;
+
+  @include desktop {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem;
+  }
 }
 
-@mixin navLabel {
-  font-size: 1.2rem;
+@mixin text-article {
+  font-size: 1rem;
   line-height: 1.5rem;
+  letter-spacing: -0.015625rem;
 
   @include desktop {
     font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: 500;
+  }
+}
+
+@mixin text-logo {
+  font-size: 1.125rem;
+  line-height: 1.35rem;
+  letter-spacing: -0.015625rem;
+
+  @include desktop {
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: -0.01831rem;
+  }
+}
+
+@mixin text-button {
+  font-size: 1.125rem;
+  line-height: 1.35rem;
+  letter-spacing: -0.015625rem;
+
+  @include desktop {
+    font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1.625rem;
   }
 }
