--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,7 +17,7 @@ body {
   font-style: normal;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  background-color: var(--background-white);
+  background-color: var(--background);
   font-family: var(--font-dm-sans);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
