--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -9,7 +9,6 @@
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 2rem;
-  font-weight: 600;
   cursor: pointer;
   transition: background 0.3s ease;
 
@@ -23,12 +22,20 @@
   }
 
   &.secondary {
-    background-color: transparent;
-    border: 1px solid var(--white);
+    background-color: var(--secondary);
     color: var(--white);
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: #3a22cc;
+    }
+  }
+
+  &.social {
+    background-color: var(--socials);
+    color: var(--white);
+
+    &:hover {
+      background-color: #0d8edb; 
     }
   }
 
