feat: SignUpForm added

--- a/src/components/sections/Hero/Hero.module.scss
+++ b/src/components/sections/Hero/Hero.module.scss
@@ -4,10 +4,10 @@
 .wrapper {
   background-color: var(--background);
   color: var(--white);
- padding-top: 2rem;
+  padding: 2rem 0;
 
   @include desktop {
-   padding-top: 6rem;
+   padding: 4rem 0;
   }
 }
 
@@ -18,7 +18,7 @@
   
   @include desktop {
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 4rem; 
   }
@@ -35,6 +35,7 @@
 
   @include desktop {
     flex: 1;
+    padding-top: 3.5rem;
     padding-inline: 0;
   }
 }
@@ -63,7 +64,6 @@
   border-radius: 0.75rem;
   padding: 2rem;
   width: 100%;
-  max-width: 28rem;
   min-height: 400px;
   margin-inline: auto;
 
@@ -74,5 +74,7 @@
   @include desktop {
     margin-inline: 0;
     flex: 1;
+    max-width: none;
+    padding: 2rem 4rem;
   }
 }
