--- a/src/components/ui/Form/Form.module.scss
+++ b/src/components/ui/Form/Form.module.scss
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  color: var(--text);
 }
 
 .checkbox {
@@ -51,7 +52,7 @@
     content: "";
     flex: 1;
     height: 2px;
-    background-color: var(--grey);
+    background-color: var(--Colors-Grey, #EBEAED);
   }
   
   &::before {
@@ -76,4 +77,12 @@
       text-decoration: underline;
     }
   }
+}
+
+.error {
+  color: var(--third);
+  font-size: 0.8rem;
+  margin-top: -0.5rem;
+  margin-bottom: -0.25rem;
+  padding-left: 1rem;
 }
