feat: PricingTable added

--- a/src/components/sections/Hero/Hero.module.scss
+++ b/src/components/sections/Hero/Hero.module.scss
@@ -5,7 +5,7 @@
   background-color: var(--background);
   color: var(--white);
   padding: 2rem 0;
-  min-height: 100vh;
+
 
   @include desktop {
    padding: 4rem 0;
@@ -64,7 +64,8 @@
   border-radius: 0.75rem;
   padding: 2rem;
   width: 100%;
-  min-height: 400px;
+  max-width: 30rem;
+  min-height: 37.5rem;
   margin-inline: auto;
 
   display: flex;
@@ -74,22 +75,8 @@
   @include desktop {
     margin-inline: 0;
     flex: 1;
-    max-width: none;
     padding: 2rem 4rem;
   }
 }
 
-.pricingWrapper {
-  background-color: var(--white);
-  width: 100%;
-  min-height: calc(100vh - 4rem);
-  border-radius: 0;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 3rem 1rem;
-  
-  @include tablet {
-    padding: 4rem 2rem;
-  }
-}
+
