--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,7 @@
     --text: rgba(21, 20, 57, 0.40);
     --white: #FFFFFF;
     --socials: #1DA1F2;
+    --pricing-heading: #1E0E62;
 
     --font-dm-sans: 'DM Sans', sans-serif;
   }
