--- a/src/components/ui/Form/Form.module.scss
+++ b/src/components/ui/Form/Form.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+
 }
 
 .heading {
@@ -52,7 +53,7 @@
     content: "";
     flex: 1;
     height: 2px;
-    background-color: var(--Colors-Grey, #EBEAED);
+    background-color: var(--grey);
   }
   
   &::before {
