--- a/src/components/layout/Navigation/Navigation.module.scss
+++ b/src/components/layout/Navigation/Navigation.module.scss
@@ -6,6 +6,7 @@
   padding-block: 2rem;
   color: var(--white);
   position: relative;
+  z-index: 100; // Ensure navigation is above other content
 }
 
 .innerWrapper {
@@ -52,36 +53,32 @@
 }
 
 .mobileMenu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: var(--background);
+  padding: 1.5rem 2rem;
+  gap: 1.5rem;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  
+  @include desktop {
     display: none;
-  
-    @include maxTablet {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      background-color: var(--background);
-      padding: 1.5rem 2rem;
-      gap: 1.5rem;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      opacity: 0;
-      visibility: hidden;
-      transform: translateY(-1rem);
-      transition:
-        opacity 0.4s var(--ease-out-expo),
-        transform 0.4s var(--ease-out-expo),
-        visibility 0.4s ease;
-      z-index: 1000;
-  
-      &.mobileMenuOpen {
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0); 
-      }
-    }
   }
   
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+}
 
 .mobileMenuList {
   display: flex;
